# murshop24-tg-bot

./: .editorconfig  Dockerfile  pyproject.toml  requirements.txt
murshop24_tg_bot/: __main__.py  _callback_data.py  _consts.py  _errors.py  _settings.py  _webhook.py
murshop24_tg_bot/_db/: __init__.py  catalog.py  order.py  start.py  tg_bot.py
murshop24_tg_bot/_filters/: tg_bot.py
murshop24_tg_bot/_handlers/: __init__.py  catalog.py  error.py  faq.py  order.py  rules.py  start.py  tg_bot.py
murshop24_tg_bot/_markups/: catalog.py  error.py  faq.py  order.py  rules.py  start.py  tg_bot.py
murshop24_tg_bot/_middlewares/: tg_customer.py
