[tool.poetry]
name = "murshop24-tg-bot"
version = "0.1.0"
description = ""
authors = ["klim-neumann <klim.neumann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
aiohttp = "^3.8.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
psycopg = "^3.1.12"
murshop24-models = {git = "https://github.com/klim-neumann/murshop24-models.git"}
pytz = "^2023.3.post1"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
black = "^23.11.0"
isort = "^5.12.0"
editorconfig-checker = "^2.7.3"
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
